--- a/TimeZone/Views/Account/ForgetPassword.cshtml
+++ b/TimeZone/Views/Account/ForgetPassword.cshtml
@@ -38,11 +38,11 @@
     
     @if(Model == true)
     {
-        <p style="color:green;">We Sent You an Email With Your New Password</p>
+        <p style="color:green; margin-top:20px;">We Sent You an Email With Your New Password</p>
     }
     else if(Model == false)
     {
-        @Html.ValidationSummary();
+            <p style="color:red; margin-top:20px;">This Email Is Not Exsists</p>
     }
     </div>
 
