--- a/TimeZone/Views/Account/Login.cshtml
+++ b/TimeZone/Views/Account/Login.cshtml
@@ -117,7 +117,10 @@
                         <i class="fa-brands fa-microsoft fa-2xl" style="color: #3fc6ff;"></i>
                     </a>
                 </div>
-                <a href="/Account/ForgetPassword"><p>Forget Password?</p></a>
+                <a href="/Account/ForgetPassword" style="text-decoration:none;margin-top:30px; color:black;">
+                    <p style="    margin-top: -215px;
+    margin-left: 318px;">Forget Password?</p>
+                </a>
                 
         </div>
        </div>
