--- a/TimeZone/Views/Cart/_CartBody.cshtml
+++ b/TimeZone/Views/Cart/_CartBody.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<BusinessLogicLayer.ViewModels.ProductViewModel>
+
 <div class="cart-container">
     <h1>Your Shopping Cart</h1>
 
@@ -16,7 +17,8 @@
             </thead>
             <tbody>
                 @foreach (var item in Model)
-                {
+                {    
+                    
                     <tr>
                         <td>
                             <div class="product-info">
@@ -28,9 +30,9 @@
                         </td>
                         <td class="price">$@item.Price</td>
                         <td>
-                            <input type="number" class="quantity" value="@item.Quantity" min="1" />
+                            <input type="number" class="quantity" value="1" min="1" />
                         </td>
-                        <td class="total">$@(item.Price * item.Quantity)</td>
+                        <td class="total">$@(item.Price)</td>
                         <td>
                            <form action="/Cart/DeleteFromCart" method="post" class="remove-from-cart-form">
     <input type="hidden" name="productId" value="@item.Id" />
