--- a/TimeZone/Views/Cart/Index.cshtml
+++ b/TimeZone/Views/Cart/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<BusinessLogicLayer.ViewModels.ProductViewModel>
-
+@{
+    var sh = ViewData["Sh"] as ShoppingCart;
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
