--- a/TimeZone/Views/Cart/_CartBody.cshtml
+++ b/TimeZone/Views/Cart/_CartBody.cshtml
@@ -1,5 +1,4 @@
 ﻿@model List<BusinessLogicLayer.ViewModels.ProductViewModel>
-
 <div class="cart-container">
     <h1>Your Shopping Cart</h1>
 
@@ -46,12 +45,13 @@
         </table>
 
         <div class="cart-total">
-            <p>Total: $<span id="cartTotal"></span></p>
+            <p>Total: $<span id="cartTotal">16.25</span></p>
         </div>
 
-        <div class="checkout-button">
-            <a href="/Checkout">Proceed to Checkout</a>
-        </div>
+        <form method="get" action="Cart/CreateCheckOutSession">
+            <input type="hidden" name="Total" value="16.25">
+            <button type="submit" class="checkout-buttonfinal">Proceed to Checkout</button>
+        </form>
     }
     else
     {
